--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^12.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
+    "jest": "^28.0.0",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1"
   }
