--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/jest": "^29.5.8",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-sound": "^0.11.0"
