refactor: add local dependency and project meta

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@genius/engine": "1.0.0",
     "@types/jest": "^29.5.8",
     "react": "17.0.1",
     "react-native": "0.64.2",
