chore: add tsconfig build

--- a/engine/package.json
+++ b/engine/package.json
@@ -2,13 +2,14 @@
   "name": "@genius/engine",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -p tsconfig.build.json"
   },
   "keywords": [],
   "author": "",
