--- a/engine/tsconfig.build.json
+++ b/engine/tsconfig.build.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "dist",
+        "declaration": true,
         "esModuleInterop": true,
         "target": "ES2020",
         "module": "ES2020",
