--- a/genius-mobile/package.json
+++ b/genius-mobile/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.18",
+    "expo-audio": "~0.3.5",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -38,7 +40,6 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-sound": "^0.11.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
